--- a/7_REQUISICOES_HTTP_REACT/projeto/src/App.css
+++ b/7_REQUISICOES_HTTP_REACT/projeto/src/App.css
@@ -91,3 +91,19 @@
 .btnSubmit:hover {
   background-color: #0056b3;
 }
+
+
+/*.spNameProduct {
+  flex-direction: column;
+  display: flex;
+  text-align: center;
+  width: 50%;
+  border: 1px solid #000;
+}*/
+
+.spPriceProduct {
+  flex-direction: column;
+  display: flex;
+  text-align: end;
+  margin-right: 50px;
+}
